Fix lower parallax layer visibility

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@
 #textblock-container {
   width: 50%;
   margin: 0 auto;
-  padding-top: 70px;
 }
 
 #textblock-title {
